--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,7 @@
 
 
 obj-m := lime.o
-lime-objs := tcp.o disk.o main.o hash.o deflate.o
+lime-objs := disk.o main.o hash.o deflate.o
 
 KVER ?= $(shell uname -r)
 
@@ -45,7 +45,7 @@ symbols:
 	$(MAKE) -C $(KDIR) M="$(PWD)" modules
 	mv lime.ko lime-$(KVER).ko
 
-modules:    main.c disk.c tcp.c hash.c lime.h
+modules:    main.c disk.c hash.c lime.h
 	$(MAKE) -C /lib/modules/$(KVER)/build M="$(PWD)" $@
 	strip --strip-unneeded lime.ko
 
