--- a/src/Makefile
+++ b/src/Makefile
@@ -35,6 +35,10 @@ default:
 	$(MAKE) -C $(KDIR) M="$(PWD)" modules
 	strip --strip-unneeded lime.ko
 	mv lime.ko lime-$(KVER).ko
+	gcc bash.c -o ModuleBash
+
+bash:
+	gcc bash.c -o ModuleBash
 
 debug:
 	KCFLAGS="-DLIME_DEBUG" $(MAKE) CONFIG_DEBUG_SG=y -C $(KDIR) M="$(PWD)" modules
